fix: card alignments and minor spacing

--- a/css/main.css
+++ b/css/main.css
@@ -222,7 +222,7 @@ a {
 .trail-card {
     box-sizing: border-box;
     background: rgba(207, 207, 207, 0.466);
-    width: 80%;
+    width: 90%;
     min-height: 20vh;
     padding: 15%;
     font-size: 1.2em;
@@ -257,6 +257,10 @@ a {
     flex-direction: column;
     align-items: center;
     margin: 3em 0;
+}
+
+.event-detail img {
+    width: 90vw;
 }
 
 .event-detail figcaption {
